# lm2viewer

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  WORKFLOW.md  body_metadata.json  lba_hqr.py  pyproject.toml  requirements.txt  viewer.py
docs/: README.md  architecture.md  documentation.md  implement.md  linear-state.md  plans.md  prompt.md  symphony.md
frontend/: PLAN.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  dom.ts  main.ts  styles.css  types.ts
frontend/src/ui/: catalog.ts  stats.ts
frontend/src/viewer/: modelMesh.ts  scene.ts
lba2_lm2_viewer/: __init__.py  __main__.py  viewer.py
scripts/: build.py  package.py
symphony/: __init__.py  agent.py  cli.py  config.py  docs_sync.py  env.py  errors.py  logging.py  models.py  orchestrator.py  tracker.py  workflow.py  workspace.py
tests/: test_binary_parsers.py  test_symphony_agent.py  test_symphony_docs_sync.py  test_symphony_env.py  test_symphony_orchestrator.py  test_symphony_tracker.py  test_symphony_workflow.py  test_symphony_workspace.py  test_viewer_concurrency.py  test_viewer_upload.py
