[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lba2-lm2-viewer"
version = "0.1.0"
description = "Standalone LM2 model explorer for Little Big Adventure 2 assets"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "LBA2 LM2 Viewer contributors" }]
dependencies = []

[project.scripts]
lba2-lm2-viewer = "lba2_lm2_viewer.viewer:main"
symphony = "symphony.cli:main"

[tool.setuptools]
packages = ["lba2_lm2_viewer", "symphony"]

[tool.setuptools.package-data]
lba2_lm2_viewer = ["body_metadata.json", "frontend/dist/**/*"]
